feat: add bean draw gameplay
